37870.rebar_seg_tuning.err
COMET INFO: Experiment is live on comet.com https://www.comet.com/william-yao425/rebar-segmentation/831e5cd3c035419eb9a6f49eca1fa6e7

Traceback (most recent call last):
  File "/mnt/data/dayhoff/home/u6771897/constructive_detection/train.py", line 20, in <module>
    result = model.train(data=SERVER_PATH,
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/data/dayhoff/home/u6771897/.conda/envs/myenv/lib/python3.11/site-packages/ultralytics/engine/model.py", line 626, in train
    self.trainer = (trainer or self._smart_load("trainer"))(overrides=args, _callbacks=self.callbacks)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/data/dayhoff/home/u6771897/.conda/envs/myenv/lib/python3.11/site-packages/ultralytics/models/yolo/segment/train.py", line 30, in __init__
    super().__init__(cfg, overrides, _callbacks)
  File "/mnt/data/dayhoff/home/u6771897/.conda/envs/myenv/lib/python3.11/site-packages/ultralytics/engine/trainer.py", line 98, in __init__
    self.args = get_cfg(cfg, overrides)
                ^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/data/dayhoff/home/u6771897/.conda/envs/myenv/lib/python3.11/site-packages/ultralytics/cfg/__init__.py", line 210, in get_cfg
    check_dict_alignment(cfg, overrides)
  File "/mnt/data/dayhoff/home/u6771897/.conda/envs/myenv/lib/python3.11/site-packages/ultralytics/cfg/__init__.py", line 308, in check_dict_alignment
    raise SyntaxError(string + CLI_HELP_MSG) from e
SyntaxError: '[31m[1moptimiser[0m' is not a valid YOLO argument. Similar arguments are i.e. ['optimizer=auto', 'optimize=False', 'time'].

    Arguments received: ['yolo', '--multi-threading']. Ultralytics 'yolo' commands use the following syntax:

        yolo TASK MODE ARGS

        Where   TASK (optional) is one of ('detect', 'segment', 'classify', 'pose', 'obb')
                MODE (required) is one of ('train', 'val', 'predict', 'export', 'track', 'benchmark')
                ARGS (optional) are any number of custom 'arg=value' pairs like 'imgsz=320' that override defaults.
                    See all ARGS at https://docs.ultralytics.com/usage/cfg or with 'yolo cfg'

    1. Train a detection model for 10 epochs with an initial learning_rate of 0.01
        yolo train data=coco128.yaml model=yolov8n.pt epochs=10 lr0=0.01

    2. Predict a YouTube video using a pretrained segmentation model at image size 320:
        yolo predict model=yolov8n-seg.pt source='https://youtu.be/LNwODJXcvt4' imgsz=320

    3. Val a pretrained detection model at batch-size 1 and image size 640:
        yolo val model=yolov8n.pt data=coco128.yaml batch=1 imgsz=640

    4. Export a YOLOv8n classification model to ONNX format at image size 224 by 128 (no TASK required)
        yolo export model=yolov8n-cls.pt format=onnx imgsz=224,128

    6. Explore your datasets using semantic search and SQL with a simple GUI powered by Ultralytics Explorer API
        yolo explorer

    5. Run special commands:
        yolo help
        yolo checks
        yolo version
        yolo settings
        yolo copy-cfg
        yolo cfg

    Docs: https://docs.ultralytics.com
    Community: https://community.ultralytics.com
    GitHub: https://github.com/ultralytics/ultralytics
    
COMET INFO: ---------------------------------------------------------------------------------------
COMET INFO: Comet.ml Experiment Summary
COMET INFO: ---------------------------------------------------------------------------------------
COMET INFO:   Data:
COMET INFO:     display_summary_level : 1
COMET INFO:     url                   : https://www.comet.com/william-yao425/rebar-segmentation/831e5cd3c035419eb9a6f49eca1fa6e7
COMET INFO:   Others:
COMET INFO:     Name : trial20240224
COMET INFO:   Uploads:
COMET INFO:     conda-environment-definition : 1
COMET INFO:     conda-info                   : 1
COMET INFO:     conda-specification          : 1
COMET INFO:     environment details          : 1
COMET INFO:     filename                     : 1
COMET INFO:     git metadata                 : 1
COMET INFO:     git-patch (uncompressed)     : 1 (61.31 MB)
COMET INFO:     installed packages           : 1
COMET INFO:     os packages                  : 1
COMET INFO:     source_code                  : 1 (1.01 KB)
COMET INFO: 
COMET INFO: Please wait for assets to finish uploading (timeout is 10800 seconds)
COMET INFO: Still uploading 1 file(s), remaining 18.11 MB/18.78 MB
